force-app/main/default/objects/RevenueScheduleOpportunity__c/RevenueScheduleOpportunity__c.object-meta.xml
<CustomObject>
    <label>Opportunity Revenue Schedule</label>
    <nameField>
        <displayFormat>RS{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>