force-app/main/default/objects/RevenueScheduleOpportunity__c/fields/BO_Primary_Delivery_Division__c.field-meta.xml
<CustomField>
    <fullName>BO_Primary_Delivery_Division__c</fullName>
    <formula>Parent__r.cPrimaryDeliveryDivision__c</formula>
    <label>BO Primary Delivery Division</label>
    <type>Text</type>
</CustomField>