force-app/main/default/objects/RevenueScheduleOpportunity__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Revenue Schedules</relationshipLabel>
    <relationshipName>OpportunityRevenueSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>