force-app/main/default/objects/RevenueScheduleOpportunity__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>3</length>
    <type>Text</type>
</CustomField>