force-app/main/default/objects/RevenueScheduleOpportunity__c/fields/RevenueDivide8__c.field-meta.xml
<CustomField>
    <fullName>RevenueDivide8__c</fullName>
    <formula>Revenue__c /100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue(/100000000)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>