force-app/main/default/objects/RevenueScheduleOpportunity__c/fields/ScheduleMonth__c.field-meta.xml
<CustomField>
    <fullName>ScheduleMonth__c</fullName>
    <description>Month value of Schedule Date field</description>
    <formula>TEXT(YEAR(ScheduleDate__c)) &amp; &quot;/&quot; &amp; IF(Month(ScheduleDate__c) &lt; 10, &quot;0&quot; &amp; TEXT(Month(ScheduleDate__c)), TEXT(Month(ScheduleDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Month</label>
    <type>Text</type>
</CustomField>